# light

./: .gitignore  LICENSE  README.md  changelog.md  meson.build  meson_options.txt
.github/: labeler.yml
.github/workflows/: build.yml
data/core/: command.lua  commandview.lua  common.lua  config.lua  contextmenu.lua  docview.lua  emptyview.lua  init.lua  logview.lua  nagview.lua  node.lua  rootview.lua  start.lua  statusview.lua  titlebar.lua  titleview.lua  tokenizer.lua  view_native.lua
data/core/commands/: clay.lua  doc.lua
data/core/doc/: highlighter.lua  init.lua  search.lua  translate.lua
data/plugins/: autocomplete.lua  detectindent.lua  drawwhitespace.lua  linewrapping.lua  projectsearch.lua  scale.lua  toolbarview.lua  treeview.lua  trimwhitespace.lua
resources/linux/: com.light.Light.desktop
resources/windows/: manifest.rc
scripts/: build.sh  package-appimage.sh  package-innosetup.sh
src/: clay.h  clay_rencache.cpp  clay_rencache.hpp  clay_renderer.cpp  clay_renderer.hpp  lua_compat.h  main.cpp  meson.build  rencache.c  rencache.h  renwindow.c  renwindow.h
src/api/: Config.cpp  Config.hpp  api.c  api.h  api_clay.cpp  api_view.cpp  buffer.cpp  process.c  renwindow.c  system.c  utf8.c  view_ffi.cpp
src/buf/: RopeBuffer.cpp  RopeBuffer.hpp
src/core/views/: Position.hpp  View.cpp  View.hpp
src/core/views/renviews/: ViewRenderer.cpp  ViewRenderer.hpp
src/views/: Position.hpp  Scrollbar.cpp  Scrollbar.hpp  View.cpp  View.hpp
src/views/renviews/: ViewRenderer.cpp  ViewRenderer.hpp
subprojects/: librope.wrap  luajit.wrap
subprojects/packagefiles/librope/: meson.build
subprojects/packagefiles/luajit/: meson.build
